--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -86,7 +86,7 @@ fun_features:
 
     # 游标字符
     # Cursor character
-    cursorChar: "🐱‍🏍"
+    cursorChar: "💘"
 
     # 是否循环播放效果
     # If true, loop animation
